# tungsten

./: LICENSE  Makefile  forge.py  gemini.md  pyproject.toml  sessions.md
clusters/alpha_geometry/: manifold_bridge.py
clusters/beta_strategy/: transformer_boids.py
clusters/gamma_entropy/: levy_anneal.py
clusters/gamma_metabolism/: temporal_bridge.py
core/: formal_gate.py  godel_transformer.py  invariants.lean  nss_heuristics.py  qissk_parallel.py  rgkm_rewriter.py  rgkm_sandbox.py
engine/: spine.py  thermo_engine.py
scribe/: tungsten_scribe.py
src/bridge/: gallium_melt.py  purity_kernel.py
src/clusters/alpha_geometry/: marching_4d.py  neural_cubes.py  quantum_iso.py  topological_scoring.py
src/clusters/beta_strategy/: attention_wfc.py
src/clusters/delta_sovereignty/: neuro_bft.py
src/clusters/gamma_entropy/: metabolism.py  reasoning_diff.py
src/core/: spine.py
src/engine/: orchestrator.py  spine.py  thruster.py
src/foundry/: osmosis.py  welder.py
src/memory/: kinetic_buffer.py
src/scribe/: tll_dialect.py  tungsten_scribe.py
src/tungsten/bridge/: purity_kernel.py
src/tungsten/clusters/alpha_geometry/: spatial_init.py  volumetric_probe.py
src/tungsten/foundry/: enforcer.py  osmosis.py  welder.py
src/tungsten/interface/: Pitch_Weld_Generator.py  dashboard.py  pitch_generator.py
tests/: test_alpha_geometry.py  test_cross_cluster.py  test_deep_sleep.py
tools/: external_probe.py
vector/: lazy_tensor_scp.py
